// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLR type aliases in response fields > System.Boolean maps to bool (snapshot) 1`] = `
"#nullable enable
#pragma warning disable CS1591
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DataverseModel
{
	
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_CheckEligibility")]
	public partial class ConToSo_CheckEligibilityRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		
		public static class Fields
		{
			public const string ContactId = "ContactId";
		}
		
		public const string ActionLogicalName = "contoso_CheckEligibility";
		
		public System.Guid? ContactId
		{
			get
			{
				if (this.Parameters.Contains("ContactId"))
				{
					return ((System.Guid)(this.Parameters["ContactId"]));
				}
				else
				{
					return default(System.Guid);
				}
			}
			set
			{
				this.Parameters["ContactId"] = value;
			}
		}
		
		public ConToSo_CheckEligibilityRequest()
		{
			this.RequestName = "contoso_CheckEligibility";
			this.ContactId = default(System.Guid);
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_CheckEligibility")]
	public partial class ConToSo_CheckEligibilityResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		
		public static class Fields
		{
			public const string IsEligible = "IsEligible";
			public const string Reason = "Reason";
			public const string Score = "Score";
		}
		
		public const string ActionLogicalName = "contoso_CheckEligibility";
		
		public bool? IsEligible
		{
			get
			{
				if (this.Results.Contains("IsEligible"))
				{
					return ((bool)(this.Results["IsEligible"]));
				}
				else
				{
					return default(bool);
				}
			}
			set
			{
				this.Results["IsEligible"] = value;
			}
		}
		
		public string? Reason
		{
			get
			{
				if (this.Results.Contains("Reason"))
				{
					return ((string)(this.Results["Reason"]));
				}
				else
				{
					return default(string);
				}
			}
			set
			{
				this.Results["Reason"] = value;
			}
		}
		
		public int? Score
		{
			get
			{
				if (this.Results.Contains("Score"))
				{
					return ((int)(this.Results["Score"]));
				}
				else
				{
					return default(int);
				}
			}
			set
			{
				this.Results["Score"] = value;
			}
		}
		
		public ConToSo_CheckEligibilityResponse()
		{
		}
	}
}
#pragma warning restore CS1591
"
`;

exports[`generateMessagesFile with response fields > combined file snapshot includes response fields 1`] = `
"#nullable enable
#pragma warning disable CS1591
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DataverseModel
{

	
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_CalculateCommission")]
	public partial class ConToSo_CalculateCommissionRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		
		public static class Fields
		{
			public const string OpportunityId = "OpportunityId";
			public const string OverriderAte = "OverrideRate";
		}
		
		public const string ActionLogicalName = "contoso_CalculateCommission";
		
		public System.Guid? OpportunityId
		{
			get
			{
				if (this.Parameters.Contains("OpportunityId"))
				{
					return ((System.Guid)(this.Parameters["OpportunityId"]));
				}
				else
				{
					return default(System.Guid);
				}
			}
			set
			{
				this.Parameters["OpportunityId"] = value;
			}
		}
		
		public System.Nullable<decimal>? OverriderAte
		{
			get
			{
				if (this.Parameters.Contains("OverrideRate"))
				{
					return ((System.Nullable<decimal>)(this.Parameters["OverrideRate"]));
				}
				else
				{
					return default(System.Nullable<decimal>);
				}
			}
			set
			{
				this.Parameters["OverrideRate"] = value;
			}
		}
		
		public ConToSo_CalculateCommissionRequest()
		{
			this.RequestName = "contoso_CalculateCommission";
			this.OpportunityId = default(System.Guid);
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_CalculateCommission")]
	public partial class ConToSo_CalculateCommissionResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		
		public static class Fields
		{
			public const string BreakdownJsOn = "BreakdownJson";
			public const string CommissionAmount = "CommissionAmount";
		}
		
		public const string ActionLogicalName = "contoso_CalculateCommission";
		
		public string? BreakdownJsOn
		{
			get
			{
				if (this.Results.Contains("BreakdownJson"))
				{
					return ((string)(this.Results["BreakdownJson"]));
				}
				else
				{
					return default(string);
				}
			}
			set
			{
				this.Results["BreakdownJson"] = value;
			}
		}
		
		public System.Nullable<decimal>? CommissionAmount
		{
			get
			{
				if (this.Results.Contains("CommissionAmount"))
				{
					return ((System.Nullable<decimal>)(this.Results["CommissionAmount"]));
				}
				else
				{
					return default(System.Nullable<decimal>);
				}
			}
			set
			{
				this.Results["CommissionAmount"] = value;
			}
		}
		
		public ConToSo_CalculateCommissionResponse()
		{
		}
	}

	
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_TriggerSync")]
	public partial class COntoSo_TriggerSyncRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		
		public static class Fields
		{
		}
		
		public const string ActionLogicalName = "contoso_TriggerSync";
		
		public COntoSo_TriggerSyncRequest()
		{
			this.RequestName = "contoso_TriggerSync";
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_TriggerSync")]
	public partial class COntoSo_TriggerSyncResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		
		public const string ActionLogicalName = "contoso_TriggerSync";
		
		public COntoSo_TriggerSyncResponse()
		{
		}
	}
}
#pragma warning restore CS1591"
`;

exports[`response field properties > response fields are emitted as properties (snapshot, makeResponseMessagesEditable=false) 1`] = `
"#nullable enable
#pragma warning disable CS1591
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DataverseModel
{
	
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_CalculateCommission")]
	public partial class ConToSo_CalculateCommissionRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		
		public static class Fields
		{
			public const string OpportunityId = "OpportunityId";
			public const string OverriderAte = "OverrideRate";
		}
		
		public const string ActionLogicalName = "contoso_CalculateCommission";
		
		public System.Guid? OpportunityId
		{
			get
			{
				if (this.Parameters.Contains("OpportunityId"))
				{
					return ((System.Guid)(this.Parameters["OpportunityId"]));
				}
				else
				{
					return default(System.Guid);
				}
			}
			set
			{
				this.Parameters["OpportunityId"] = value;
			}
		}
		
		public System.Nullable<decimal>? OverriderAte
		{
			get
			{
				if (this.Parameters.Contains("OverrideRate"))
				{
					return ((System.Nullable<decimal>)(this.Parameters["OverrideRate"]));
				}
				else
				{
					return default(System.Nullable<decimal>);
				}
			}
			set
			{
				this.Parameters["OverrideRate"] = value;
			}
		}
		
		public ConToSo_CalculateCommissionRequest()
		{
			this.RequestName = "contoso_CalculateCommission";
			this.OpportunityId = default(System.Guid);
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_CalculateCommission")]
	public partial class ConToSo_CalculateCommissionResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		
		public static class Fields
		{
			public const string BreakdownJsOn = "BreakdownJson";
			public const string CommissionAmount = "CommissionAmount";
		}
		
		public const string ActionLogicalName = "contoso_CalculateCommission";
		
		public string? BreakdownJsOn
		{
			get
			{
				if (this.Results.Contains("BreakdownJson"))
				{
					return ((string)(this.Results["BreakdownJson"]));
				}
				else
				{
					return default(string);
				}
			}
		}
		
		public System.Nullable<decimal>? CommissionAmount
		{
			get
			{
				if (this.Results.Contains("CommissionAmount"))
				{
					return ((System.Nullable<decimal>)(this.Results["CommissionAmount"]));
				}
				else
				{
					return default(System.Nullable<decimal>);
				}
			}
		}
		
		public ConToSo_CalculateCommissionResponse()
		{
		}
	}
}
#pragma warning restore CS1591
"
`;

exports[`response field properties > response fields are emitted as properties (snapshot, makeResponseMessagesEditable=true default) 1`] = `
"#nullable enable
#pragma warning disable CS1591
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

namespace DataverseModel
{
	
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.RequestProxyAttribute("contoso_CalculateCommission")]
	public partial class ConToSo_CalculateCommissionRequest : Microsoft.Xrm.Sdk.OrganizationRequest
	{
		
		public static class Fields
		{
			public const string OpportunityId = "OpportunityId";
			public const string OverriderAte = "OverrideRate";
		}
		
		public const string ActionLogicalName = "contoso_CalculateCommission";
		
		public System.Guid? OpportunityId
		{
			get
			{
				if (this.Parameters.Contains("OpportunityId"))
				{
					return ((System.Guid)(this.Parameters["OpportunityId"]));
				}
				else
				{
					return default(System.Guid);
				}
			}
			set
			{
				this.Parameters["OpportunityId"] = value;
			}
		}
		
		public System.Nullable<decimal>? OverriderAte
		{
			get
			{
				if (this.Parameters.Contains("OverrideRate"))
				{
					return ((System.Nullable<decimal>)(this.Parameters["OverrideRate"]));
				}
				else
				{
					return default(System.Nullable<decimal>);
				}
			}
			set
			{
				this.Parameters["OverrideRate"] = value;
			}
		}
		
		public ConToSo_CalculateCommissionRequest()
		{
			this.RequestName = "contoso_CalculateCommission";
			this.OpportunityId = default(System.Guid);
		}
	}
	
	[System.Runtime.Serialization.DataContractAttribute(Namespace="http://schemas.microsoft.com/xrm/2011/new/")]
	[Microsoft.Xrm.Sdk.Client.ResponseProxyAttribute("contoso_CalculateCommission")]
	public partial class ConToSo_CalculateCommissionResponse : Microsoft.Xrm.Sdk.OrganizationResponse
	{
		
		public static class Fields
		{
			public const string BreakdownJsOn = "BreakdownJson";
			public const string CommissionAmount = "CommissionAmount";
		}
		
		public const string ActionLogicalName = "contoso_CalculateCommission";
		
		public string? BreakdownJsOn
		{
			get
			{
				if (this.Results.Contains("BreakdownJson"))
				{
					return ((string)(this.Results["BreakdownJson"]));
				}
				else
				{
					return default(string);
				}
			}
			set
			{
				this.Results["BreakdownJson"] = value;
			}
		}
		
		public System.Nullable<decimal>? CommissionAmount
		{
			get
			{
				if (this.Results.Contains("CommissionAmount"))
				{
					return ((System.Nullable<decimal>)(this.Results["CommissionAmount"]));
				}
				else
				{
					return default(System.Nullable<decimal>);
				}
			}
			set
			{
				this.Results["CommissionAmount"] = value;
			}
		}
		
		public ConToSo_CalculateCommissionResponse()
		{
		}
	}
}
#pragma warning restore CS1591
"
`;
